Fix menu position on mobile

--- a/assets/css/sensei-course-theme/focus-mode.scss
+++ b/assets/css/sensei-course-theme/focus-mode.scss
@@ -26,10 +26,6 @@ $base: '.sensei-course-theme';
 		}
 	}
 
-	.sensei-course-theme__sidebar {
-		padding-top: 32px;
-	}
-
 	.sensei-course-theme--focus-mode {
 		--focus-header-height: 45px;
 
