--- a/assets/css/sensei-course-theme/layout.scss
+++ b/assets/css/sensei-course-theme/layout.scss
@@ -1,13 +1,16 @@
 :root {
 	--header-height: var(--focus-header-height, 75px);
 	--sidebar-width: 300px;
-	--top-offset: 0px;
 	--content-padding: 32px;
-	--full-header-height: calc(var(--header-height) + var(--top-offset));
 }
 
 body {
 	background-color: var(--bg-color);
+}
+
+.wp-site-blocks {
+	// This var needs to be in another level because we update the `--header-height` in the body.
+	--full-header-height: calc(var(--header-height) + var(--sensei-wpadminbar-offset));
 }
 
 .sensei-course-theme__frame {
@@ -28,11 +31,6 @@ body {
 }
 
 .sensei-course-theme {
-
-	@at-root body.admin-bar {
-		--top-offset: var(--wp-admin--admin-bar--height, 32px);
-	}
-
 	background-color: var(--bg-color);
 
 	&__columns, &__header {
@@ -42,7 +40,7 @@ body {
 	&__header {
 		margin: 0;
 		position: sticky;
-		top: var(--top-offset);
+		top: var(--sensei-wpadminbar-offset);
 		background-color: var(--bg-color);
 		z-index: 100;
 	}
