--- a/assets/css/sensei-course-theme/mobile.scss
+++ b/assets/css/sensei-course-theme/mobile.scss
@@ -1,14 +1,8 @@
-
 .sensei-course-theme__sidebar-toggle {
 	display: none;
 }
 
 @media screen and (max-width: ($breakpoint - 1)) {
-
-	body.admin-bar {
-		--top-offset: var(--wp-admin--admin-bar--height, 46px);
-	}
-
 	.sensei-course-theme__focus-mode-toggle {
 		display: none;
 	}
@@ -23,6 +17,7 @@
 
 		&--sidebar-open {
 			--header-height: 90px;
+			overflow: hidden;
 
 			.sensei-course-theme__header__container {
 				padding-bottom: var(--header-open-height);
@@ -165,13 +160,9 @@
 }
 
 @media screen and (max-width: 600px) {
-	body.admin-bar {
-		--top-offset: 0px;
-	}
 	.sensei-course-theme {
 		&--sidebar-open &__sidebar {
 			transition: all 400ms, padding-top 0ms 0ms;
-			padding-top: calc(24px + var(--sensei-wpadminbar-offset, 0px));
 		}
 	}
 }
